--- a/style.css
+++ b/style.css
@@ -49,9 +49,9 @@ body{
     #header-img{
         width: 25vw;
     }
-    body{
+    /* body{
         background-color: rgb(190, 12, 12);
-    }
+    } */
 }
 @media only screen and (max-width:670px)and (min-width:501px){
   #header{
@@ -83,9 +83,9 @@ body{
         /* width: 28vw; */
         width: 100%;
     }
-    body{
+    /* body{
         background-color: #ccded6;
-    }
+    } */
 }
 
 @media only screen and (max-width:500px){
@@ -118,9 +118,10 @@ body{
             /* width: 28vw; */
             width: 100%;
         }
-    body{
+    /* body{
         background-color: rgb(145, 255, 0);
     }
+    */
 }
 
 h2{
@@ -135,7 +136,7 @@ form{
 }
 #email{
     margin: 14px;
-    width: 35vw;
+    /* width: 35vw; */
     height: 3vh;
 }
 #submit{
@@ -146,23 +147,70 @@ form{
     margin: 14px 0px;
 }
 #features{
-    width: 50vw;
-    padding: 28px;
-    margin: auto;
-    /* display: flex; */
-    background-color: red;
-    height: 100vh;
-    /* flex-direction: column; */
-     /* justify-content: space-between; */
+    display: grid;
+    /* grid-template-columns: 2fr 2fr; */
+    grid-template-rows: 3fr;
+    grid-gap: 1rem;
+    
+}
+
+.box{
+        text-align: center;
+    margin: 9px;
+    padding: 14px 4px;
+
+}
+.icon{
+    padding: 7px 22px;
+    display: inline-block;
+}
+.desc{
+    display: inline-block;
 }
 #Howitworks
-{
-    background-color: green;
-    height: 100vh;
+{    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+   
+}
+#video{
+    max-width: 560px;
+    width: 100%;
 }
 #pricing{
-    background-color: yellow;
-    height: 100vh;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.card{
+    /* background-color: gray; */
+    text-align: center;
+    background-color: #fffffff2;
+    display: inline-block;
+    /* margin: 3rem; */
+    margin: 1rem 5px;
+    border: 2px solid black;
+}
+.one{
+    padding: 13px;
+    margin-bottom: 27px;
+    background-color: gray;
+}
+.two{
+    padding: 0px 96px;
+}
+.two p{
+    padding: 2px;
+}
+.btn{
+    padding: 10px 20px;
+    margin: 11px;
+    background-color: #fff80f;
+    color: black;
+    cursor: pointer;
+}
+.btn:hover{
+    background-color: orange;
 }
 
 #features .icon i::before{
@@ -186,3 +234,13 @@ footer{
 #copy{
     padding: 6px;
 }
+@media only screen and (max-width:500px){
+
+#vedio{
+    max-width: 93%;
+        }
+        .two{
+
+            padding: 0px 4.7rem;
+        }
+    }
